# SuPicker

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py  test_fix.py
.claude/: settings.local.json
docs/: changelog-2026-03-09.md
docs/analysis_GLM5/: architecture_analysis.md
docs/analysis_coder/: complete-analysis.md  network-architecture-deep-dive.md  scientific-analysis-and-optimization.md
docs/analysis_gemini/: network_architecture_analysis.md
docs/analysis_gpt5-4/: 2026-03-22-cryo-em-particle-picking-architecture-analysis.md  2026-03-22-cryo-em-particle-picking-decision-summary.md
docs/analysis_kimi-k2-5/: architecture_analysis.md
docs/analysis_minimax2-7/: architecture_analysis.md
docs/analysis_opus/: architecture_analysis.md
docs/plans/: 2026-01-28-supicker-design.md  2026-01-28-supicker-implementation.md
scripts/: predict.py  scan_thresholds.py  star_tool.py  train.py  validate_coords.py
supicker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
supicker/config/: __init__.py  base.py  data.py  inference.py  model.py  training.py
supicker/data/: __init__.py  dataset.py  star_parser.py  target_generator.py  transforms.py
supicker/engine/: predictor.py  trainer.py
supicker/losses/: __init__.py  combined.py  focal_loss.py  regression_loss.py
supicker/models/: __init__.py  detector.py
supicker/models/backbone/: __init__.py  convnext.py
supicker/utils/: __init__.py  checkpoint.py  coordinate_validation.py  export.py  logger.py  metrics.py
tests/: test_end_to_end.py
tests/config/: test_base.py  test_data.py  test_inference.py  test_model.py  test_training.py
tests/data/: test_dataset.py  test_star_parser.py  test_target_generator.py  test_transforms.py
tests/engine/: test_predictor.py  test_trainer.py
tests/losses/: test_combined.py  test_focal_loss.py  test_regression_loss.py
tests/models/: test_detector.py
tests/scripts/: test_predict_script.py  test_scan_thresholds.py  test_train_script.py
tests/utils/: test_checkpoint.py  test_coordinate_validation.py  test_export.py  test_logger.py  test_metrics.py
(+7 files in other folders)
